// A very simple protocol definition, consisting of only
// one message.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package tflightPackage;

enum MsgType { 
	tflightPBType = 0; 
	TSPCtrlInfoType = 1;
	DSTCtrlInfoType = 2;
	TFLightCtrlInfoType = 3;
	ServCtrlInfoType = 4;
} 

message BaseMsg{ 
	required MsgType msg_type = 1; 
} 

message TFmessage {
    required uint32 stage = 1;
    required uint32 state = 2;
    required uint32 time = 3;
    required uint32 nextstate = 4;
    required uint32 nexttime = 5;
    required uint32 r_period = 6;
    required uint32 g_period = 7;
    required uint32 y_period = 8;  	
}

message tflightPB {
	required MsgType msg_type = 1; 
    repeated TFmessage TF = 2;
}

message TSPCtrlInfo {
	required MsgType msg_type = 1; 
	required bool vehicle_priority_enable = 2;
	required uint32 priority_rule  = 3;
	required uint32 curr_vehicle_phase = 4;
	optional uint32 green_extend_time = 5;
	required bool vehicle_passed_flag = 6;
}

message DSTCtrlInfo {
	required MsgType msg_type = 1; 
	required uint32 dst_status = 2;
	repeated uint32 green_time_init = 3;
	optional uint32 curr_green_time = 4;
}

message TFLightCtrlInfo {
	required MsgType msg_type = 1; 
	required uint32 curr_light_phase = 2;
	required uint32 curr_light_state = 3;
	required uint32 curr_run_time = 4;
	required bool priority_ctrl_ongoing = 5;
}

message ServCtrlInfo {
	required MsgType msg_type = 1; 
	required uint32 mode  = 2;					//normal, TSP, DST
	required uint32 priority_rule  = 3;			//control mode
	required uint32 curr_vehicle_phase = 4;		//current phase
	optional uint32 green_extend_time = 5;		//green delay
	optional uint32 restore_phase = 6;			//restore phase
}
